# rtk-lite-cc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
hooks/claude/: rtk-rewrite.sh
src/: main.rs
src/cmds/cloud/: aws_cmd.rs  container.rs  curl_cmd.rs  psql_cmd.rs  wget_cmd.rs
src/cmds/dotnet/: binlog.rs  dotnet_cmd.rs
src/cmds/git/: diff_cmd.rs  gh_cmd.rs  git.rs  gt_cmd.rs
src/cmds/go/: go_cmd.rs  golangci_cmd.rs
src/cmds/js/: lint_cmd.rs  next_cmd.rs  playwright_cmd.rs  pnpm_cmd.rs  prettier_cmd.rs  prisma_cmd.rs  tsc_cmd.rs  vitest_cmd.rs
src/cmds/python/: mypy_cmd.rs  pip_cmd.rs  pytest_cmd.rs  ruff_cmd.rs
src/cmds/ruby/: rake_cmd.rs  rspec_cmd.rs  rubocop_cmd.rs
src/cmds/rust/: cargo_cmd.rs  runner.rs
src/cmds/system/: deps.rs  env_cmd.rs  find_cmd.rs  format_cmd.rs  grep_cmd.rs  json_cmd.rs  local_llm.rs  log_cmd.rs  read.rs  summary.rs
src/core/: config.rs  constants.rs  filter.rs  mod.rs  runner.rs  toml_filter.rs  utils.rs
src/discover/: lexer.rs  mod.rs  registry.rs  rules.rs
src/hooks/: constants.rs  hook_check.rs  hook_cmd.rs  init.rs  mod.rs  permissions.rs  rewrite_cmd.rs  trust.rs
src/parser/: formatter.rs
