[package]
name = "rtk-lite-cc"
version = "0.2.2"
edition = "2024"
authors = ["Stephane Derosiaux"]
description = "Lightweight CLI proxy for Claude Code — minimizes LLM token consumption by filtering command outputs"
license = "MIT"
repository = "https://github.com/sderosiaux/rtk-lite-cc"
readme = "README.md"
keywords = ["cli", "llm", "token", "claude", "proxy"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rtk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
ignore = "0.4"
walkdir = "2"
regex = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
dirs = "5"
toml = "0.8"
chrono = "0.4"
tempfile = "3"
flate2 = "1.0"
quick-xml = "0.37"
which = "8"
automod = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
toml = "0.8"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# cargo-deb configuration
[package.metadata.deb]
maintainer = "Stephane Derosiaux"
copyright = "2025 Stephane Derosiaux"
license-file = ["LICENSE", "0"]
extended-description = "rtk filters and compresses command outputs before they reach your LLM context, saving 60-90% of tokens."
section = "utility"
priority = "optional"
assets = [
    ["target/release/rtk", "usr/bin/", "755"],
]

# cargo-generate-rpm configuration
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rtk", dest = "/usr/bin/rtk", mode = "755" },
]
